--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,24 @@ body {
 
 
 
+#delete {
+    background-color: red;
+
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#delete:hover {
+    background-color: darkred; /* Slightly darker shade on hover */
+}
+.button-group {
+    display: flex;
+	flex-direction: row-reverse;
+    gap: 10px; /* Space between buttons */
+    justify-content: flex-start; /* Align buttons to the left */
+    align-items: center;
+    margin-top: 10px; /* Optional: Add spacing above */
+}
 
 
 
