--- a/css/style.css
+++ b/css/style.css
@@ -507,7 +507,7 @@ body {
 	grid-gap: 24px;
 	margin-top: 24px;
 	width: 100%;
-	color: var(--dark);
+	color: #609940;
 }
 
  .table-data>div {
@@ -523,7 +523,7 @@ body {
 	grid-gap: 16px;
 	margin-bottom: 24px;
 }
-
+ 
 .table-data .head h3 {
 	margin-right: auto;
 	font-size: 24px;
@@ -552,6 +552,7 @@ body {
 
 .table-data .order table td {
 	padding: 16px 0;
+	color: var(--dark);
 }
 
  .table-data .order table tr td:first-child {
